--- a/styles.css
+++ b/styles.css
@@ -51,6 +51,7 @@ footer {
   background: #056bfa27;
   border-radius: 20px;
   cursor: pointer;
+  font-family: 'Bangers';
 }
 
 .lable {
@@ -63,8 +64,4 @@ footer {
 
 .button:hover {
   background: #056bfa49;
-}
-
-.button:hover .svg-icon {
-  animation: spin 1s linear infinite;
 }
